Use Set.of() and List.of() in getAvailableCharsets(), and include Charset.defaultCharset() into set without checking if it is there already. Duplicate charsets will be eliminated by set itself automatically.